Fix ReadersService: collector(Collectors.toList()) -> toList()